[bumpversion]
current_version = 0.4.0

[bumpversion:file:conda/meta.yaml]
search = set version = "{current_version}"
replace = set version = "{new_version}"

[bumpversion:file:spec2vec/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
description-file = README.rst

[aliases]
test = pytest

[coverage:run]
branch = True
source = spec2vec

[tool:pytest]
testpaths = tests integration-tests
python_classes = *TestSuite
junit_family = xunit2

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
